@@ -5,6 +5,7 @@ trunk
 * bugfix for interaction of matrix transpose and square bracket substitution
 * added 'name=' argument to omxSetParameters()
 * improved error messages when a free parameter has multiple lbounds/ubounds
+* improved error messages when passing strings into mxModel()
 
 Release 1.2.0-1926 (February 04, 2012)
 ======================================
